Update tip 467 for vote [7f8340c808].

--- a/tip/467.md
+++ b/tip/467.md
@@ -1,8 +1,8 @@
 # TIP 467: Move TIP Collection to Fossil
 	Author:         Mark Janssen <mpc.janssen@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Process
-	Vote:           Pending
+	Vote:           Done
 	Created:        14-Mar-2017
 	Post-History:   
 	Keywords:       migration
