Rename title of TIP #425.  Some generation script improvements (use UTF-8, trim title)

--- a/tip/425.md
+++ b/tip/425.md
@@ -1,4 +1,4 @@
-# TIP 425: Internationalization of Default Panic Callback on Windows
+# TIP 425: Correct use of UTF-8 in Panic Callback (Windows only)
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -21,7 +21,7 @@ library, and modify the Tcl\_Main\(\) macro to use it.
 
 # Rationale
 
-Many parts of Tcl are initernationalized in Tcl 8.6: The command
+Many parts of Tcl use Unicode since Tcl 8.6: The command
 line handling, and the communication with all Win32 API functions.
 But the Panic proc has - so far - not been modified accordingly
 for Windows console applications, even though win32 has a
