Don't distiguish between Windows and Cygwin, it only causes confusion. Cygwin just should be treated as UNIX, nothing special.

--- a/tip/425.md
+++ b/tip/425.md
@@ -47,7 +47,7 @@ For tclsh.exe this makes no difference.
 # Proposed Change
 
 A new function _Tcl\_ConsolePanic_ is added to the stub library
-on Windows and Cygwin, which can be installed by embedding
+on Windows, which can be installed by embedding
 application as panic proc. The full signature is:
 
  > EXTERN void
@@ -55,12 +55,12 @@ application as panic proc. The full signature is:
        const char \*_format_
        ...\);
 
-On other platforms than Windows or Cygwin, _Tcl\_ConsolePanic_
+On other platforms than Windows, _Tcl\_ConsolePanic_
 is a macro equivalent to NULL, on those platforms
 Tcl\_SetPanicProc\(Tcl\_ConsolePanic\) has the effect of resetting
 the panic proc to the platform's default.
 
-This function is meant to be used for Win32 or Cygwin console
+This function is meant to be used for Win32 console
 applications, and can deliver the message in 3 possible ways
 
 * If a \(Windows\) debugger is running, the message is sent there.
