Fix tip 474 code block formatting

--- a/tip/474.md
+++ b/tip/474.md
@@ -39,16 +39,16 @@ The code fragment below illustrates the behaviour: run it under various
 platforms and use the mouse wheel in the canvas window to see which
 bindings fired.
 
- > pack [canvas .c]
- >
- > catch \{console show\}
- >
- > bind .c <ButtonPress> [list puts "ButtonPress %W %b"]
- > bind .c <Shift-ButtonPress> [list puts "Shift-ButtonPress %W %b"]
- > bind .c <Control-ButtonPress> [list puts "Control-ButtonPress %W %b"]
- > bind .c <MouseWheel> [list puts "MouseWheel %W %D"]
- > bind .c <Shift-MouseWheel> [list puts "Shift-MouseWheel %W %D"]
- > bind .c <Control-MouseWheel> [list puts "Control-MouseWheel %W %D"]
+    pack [canvas .c]
+    
+    catch {console show}
+    
+    bind .c <ButtonPress> [list puts "ButtonPress %W %b"]
+    bind .c <Shift-ButtonPress> [list puts "Shift-ButtonPress %W %b"]
+    bind .c <Control-ButtonPress> [list puts "Control-ButtonPress %W %b"]
+    bind .c <MouseWheel> [list puts "MouseWheel %W %D"]
+    bind .c <Shift-MouseWheel> [list puts "Shift-MouseWheel %W %D"]
+    bind .c <Control-MouseWheel> [list puts "Control-MouseWheel %W %D"]
 
 
 # Specification
@@ -58,8 +58,8 @@ way that it does not matter which platform the program runs on. To keep
 the incompatibility due to this change to a minimum, both types of
 bindings might hold on both types of events:
 
- > bind widget "ButtonPress-4" cmd
- > bind widget "MouseWheel" cmd
+    bind widget "ButtonPress-4" cmd
+    bind widget "MouseWheel" cmd
 
 \(One caveat is in the direction of the mouse wheel - using the first,
 one selects the direction via the button number: 4 for "up" and 5 for
@@ -73,18 +73,18 @@ analogously.
 As an example \(thanks to Jan Nijtmans for this\), the bindings for the
 text widget would look like this:
 
- >   bind Text <MouseWheel> \{
- >       %W yview scroll %D pixels
- >   \}
- >   bind Text <Option-MouseWheel> \{
- >       %W yview scroll %D pixels
- >   \}
- >   bind Text <Shift-MouseWheel> \{
- >       %W xview scroll %D pixels
- >   \}
- >   bind Text <Shift-Option-MouseWheel> \{
- >       %W xview scroll %D pixels
- >   \}
+    bind Text <MouseWheel> {
+        %W yview scroll %D pixels
+    }
+    bind Text <Option-MouseWheel> {
+        %W yview scroll %D pixels
+    }
+    bind Text <Shift-MouseWheel> {
+        %W xview scroll %D pixels
+    }
+    bind Text <Shift-Option-MouseWheel> {
+        %W xview scroll %D pixels
+    }
 
 with the %D substitution giving the right amount of pixels.
 
