Clarify FetchIntRep returns NULL when typePtr not stored in objPtr.

--- a/tip/445.md
+++ b/tip/445.md
@@ -80,7 +80,8 @@ Add to Tcl's stub table of public C routines a new routine
  > Tcl\_ObjIntRep\* **Tcl\_FetchIntRep**\(Tcl\_Obj\* _objPtr_, const Tcl\_ObjType\* _typePtr_\)
 
 which returns a pointer to the internal representation stored
-in _objPtr_ that matches the requested type _typePtr_.
+in _objPtr_ that matches the requested type _typePtr_.  If no such
+internal representation is in _objPtr_, return NULL.
 
 # Compatibility
 
