Accepted 9/0/0: YES: 9 (Decoster, English, Ferrieux, Griffin, Hobbs, Kenny, Landers, Nijtmans, Vogel). NO: -. PRESENT: -. Vote conclusion email was sent 28-Aug-2017 to Tcl Core list.

--- a/tip/166.md
+++ b/tip/166.md
@@ -1,9 +1,9 @@
 # TIP 166: Reading and Writing the Photo Image Alpha Channel
 	Author:         Donal K. Fellows <donal.k.fellows@man.ac.uk>
 	Author:         Simon Bachmann <simonbachmann@bluewin.ch>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           Pending
+	Vote:           Done
 	Created:        19-Nov-2003
 	Post-History:   
 	Keywords:       Tk,image get,image put
