Leverage assignment form of [scan] in sample code

--- a/tip/475.md
+++ b/tip/475.md
@@ -97,7 +97,7 @@ and corner cases:
             # Convert first index to an integer.
             switch $m {
                 end     {set index [string length $string]}
-                default {set index [scan $m %d]}
+                default {scan $m %d index}
             }
 >
             # Add or subtract second index, if provided.
