Polish wording, correct description of TclStringCatObjv() return value

--- a/tip/475.md
+++ b/tip/475.md
@@ -68,7 +68,7 @@ optimization, improves instruction cache utilization, and reduces both the
 possibility for bugs and the number of interactions to be audited.
 
 Furthermore, this new function should be publicly exported using the stubs
-interface so extension code can use it without having to enter the interpreter.
+interface so extension code can call it without having to enter the interpreter.
 The desirability of providing C APIs is made clear by the existence of the the
 [FlightAware [`array`] enumeration C API project]
 (http://core.tcl.tk/tcl/timeline?t=amg-array-enum-c-api).
@@ -125,7 +125,8 @@ More sample implementations can be found on the [Additional String Functions]
 (http://wiki.tcl.tk/44#pagetoc706ab8bb) page of the Tcler's Wiki, but at time of
 writing, they do not handle end-relative indexing nor can be used to append to a
 string.  Since they are implemented in terms of [`string replace`] and do not
-perform any index arithmetic of their own, they do support TIP 176 indexes.
+perform any index arithmetic of their own, they actually do support TIP 176
+indexes.
 
 # Compatibility Considerations
 
@@ -237,9 +238,9 @@ The `Tcl_ReplaceObj`() function header comment includes [this TODO note]
 This comment is describing the [case]
 (https://core.tcl.tk/tcl/artifact?name=6934c9ea66d17949&ln=3575-3592) in which
 `Tcl_ReplaceObj`() calls `TclStringCatObjv`() to concatenate its two arguments.
-`TclStringCatObjv`() returns NULL on memory allocation failure, and
-`Tcl_ReplaceObj`() dutifully propagates that NULL return to its caller, with
-detailed error information in the interpreter result.
+`TclStringCatObjv`() returns TCL_ERROR on memory allocation failure, and
+`Tcl_ReplaceObj`() dutifully translates that to a NULL return, with detailed
+error information in the interpreter result.
 
 In every other circumstance, `Tcl_ReplaceObj`() does *not* check for memory
 allocation errors.  Many, if not all, of the underlying functions it uses call
