Format correction so <foo.h> shows up in rendered output

--- a/tip/357.md
+++ b/tip/357.md
@@ -117,7 +117,7 @@ result of _interp_ \(if _interp_ is not NULL\).
 # Internals
 
 The **Tcl\_LoadHandle** object shall be represented internally by a
-structure, declared in <tclInt.h>, looking like:
+structure, declared in \<tclInt.h\>, looking like:
 
 	 struct Tcl_LoadHandle_ {
 	     ClientData clientData;	/* Client data is the load handle in the
