--- a/tip/422.md
+++ b/tip/422.md
@@ -37,7 +37,7 @@ This TIP proposes to remove the following 4 functions from the public API
 
  * Tcl\_PanicVA
 
-In addition, the inclusion of <stdarg.h> should move from tcl.h to tclInt.h,
+In addition, the inclusion of \<stdarg.h\> should move from tcl.h to tclInt.h,
 as no public Tcl header uses it any more.
  
 # Compatibility
@@ -74,7 +74,7 @@ maximum number of additional parameters that is used in any "mypanic" call.
 Since this function is only ever called from the extensions itself, this can
 be determined easily.
 
-In addition, the extension must do its own inclusion of <stdarg.h>, as tcl.h
+In addition, the extension must do its own inclusion of \<stdarg.h\>, as tcl.h
 doesn't do that any more.
 
 Extensions rewritten this way, will continue to compile and function with Tcl
