TIP 454 vote state updated

--- a/tip/454.md
+++ b/tip/454.md
@@ -2,15 +2,14 @@
 	Author:         Harald Oehlmann <Harald.Oehlmann@elmicron.de>
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           Pending
+	Vote:           Done
 	Created:        21-Sep-2016
 	Post-History:   
 	Keywords:       Tk
 	Tcl-Version:    8.6.6
 -----
-
 # Abstract
 
 A **frame**-like widget has 1x1 required size if created.
