Initial high level strawman

--- a/tip/477.md
+++ b/tip/477.md
@@ -1,6 +1,6 @@
-# TIP 477: Modernize the nmake-based build system
+# TIP 477: Modernize the nmake build system
 	Author:         Ashok P. Nadkarni <apnmbx-wits@yahoo.com>
-	State:          Draft
+	State:          WIP
 	Type:           Process
 	Vote:           Pending
 	Created:        30-Sep-2017
@@ -10,23 +10,236 @@
 
 # Abstract
 
-A place holder for now, to reserve the TIP number
+Tcl, Tk and extensions are currently built using one of two build
+systems - the Tcl Extension Architecture (TEA) and the
+Windows/Visual C++ specific nmake based environment. This TIP
+addresses only the latter with a view to modernize it to remove
+obsolete features, non-optimal build settings, and simplify writing
+and maintenance of extensions.
 
-# Rationale
+This TIP is not only a proposal, but is also intended as documentation
+of the reworked nmake build system.
 
-To be written.
+# Background and Rationale
+
+The current nmake-based build system is based on three files in the
+`win` directory of a project.
+
+* `makefile.vc` is the master makefile for the project
+
+* `rules.mk` is included by makefile.vc and contains the common
+nmake macro definitions and parsing of configuration options shared
+by all projects.
+
+* `nmakehlp.c` is a helper application that strives to overcome
+the extremely primitive functionality of `nmake`. It is invoked from
+rules.mk to check for supported compiler options, simple string
+parsing etc.
+
+As currently implemented, the system has several drawbacks including
+duplication of code making maintenance difficult, unnecessarily
+verbose extension makefiles, and inconsistent application of compiler
+options.
+
+## Avoiding duplication of code
+
+In principle, `rules.mk` and `nmakehlp.c` should be shared across Tcl,
+Tk and all extensions. In practice, each has its own copy leading to
+divergence between the various copies and the resulting maintenance
+headaches. Currently, in the 
+author found every single extension, including Tk, had diverged from
+Tcl. This means updates for new compilers, changes in Tcl build
+configuration (e.g. -DUNICODE) do not make their way into extensions.
+Moreover, making fixes involves individually fixing extensions, some
+of which are orphaned.
+
+The first goal is therefore to *allow each extension, including Tk,
+to be built off Tcl's master copy (either installed or from source)
+without having to maintain its own*.
+
+## Simplifying extension makefiles
+
+In addition, creating a `makefile.vc` for even a simple extension
+involves a lot of unnecessary boilerplate leading to
+copy-n-paste-itis and attendant problems. For the vast majority
+of "standard" extensions, implicit rules, standard targets,
+installation etc. should be automatically handled. Ideally, the
+`makefile.vc` should specify only the project name and list of object
+files. All else should be automatically taken care off.
+
+Thus, a secondary goal is to *simplify the writing of extension
+makefiles to a minimalist form that reduces the boilerplate to
+extension-specific configuration*.
+
+## Auditing compiler configuration
+
+There are some bugs, inconsistencies and misconfiguration of compiler
+options in the various incarnations of the extension
+makefiles. Examples include unoptimized release builds in some
+important extensions like Tk and Sqlite, differing floating point
+conformance options in debug and release builds even within Tcl and so
+on.
+
+Therefore, *a standard set of documented `nmake` macros are needed to
+ensure consistency across build configurations*.
+
+## Non-goals
+
+It is not the intent of this TIP to look at alternatives to
+nmake. There is already the TEA based system for those who prefer to
+use it.
+
+Certain limitations in the current nmake system, in particular
+the requirement that there be no spaces in the source directories path
+are not addressed.
+
+# Command line interface
+
+There will be no changes to the command line interface used to build
+Tcl and extensions using nmake except for removal of some obsolete
+features.
+
+    nmake /f makefile.vc ?targets? ?macros? 
+
+The predefined targets and macros are detailed later.
 
 # Specification
 
-To be written.
+## Distributing the nmake build system
 
-## Backwards compatibility
+To eliminate the issue of divergence between the nmake support files
+as well as the need for continual maintenance and update, the files
+`rules.vc`, `nmakehlp.c` and `targets.vc` will be installed as part
+of a Tcl install in a similar fashion to `tclconfig.sh`,
+`tclstub86.lib` etc.  except that they will be placed in the
+`lib\nmake` subdirectory under the Tcl installation's root directory.
 
-To be written.
+These files will also be copied to each extension's source repository
+as is (supposed to be) done today. *However, this is only a one-time
+copy and unlike the current system, it is not required to be done
+every time Tcl's version of these files change.* This also allows the
+extension to be built against older versions of Tcl that do not
+include these files in their installation.
+
+## The `rules-ext.vc` file
+
+The `rules.vc` file is intended to be included by the extension's
+makefile to locate and load the latest compatible `rules.vc` file.  It
+checks if the installed Tcl has copies of `rules.vc` and `nmakehlp.c`
+that are newer versions than the ones in the extension sources, and if
+so uses them instead of the extension's copies. In the case of
+extensions that build against the Tcl source (as opposed to a Tcl
+installation), it checks the versions in the Tcl source directory in a
+similar manner.
+
+The compilation rules are versioned via the `RULES_VERSION_MAJOR` and
+`RULES_VERSION_MINOR` macros defined in `rules.vc`. 
+Versioning is similar to Tcl's in how major and minor versions are
+treated. When comparing versions, the files in the Tcl installation
+are used if they have the same major version as that in the
+extension's rules file and their minor version is the equal or greater. 
+
+## The `nmakehlp.c` program
+The `nmakehlp.c` program has the same purpose and functionality as in
+the current system. It is unchanged and not detailed here. It is 
+compiled and invoked on the fly from nmake for some utility purposes
+such as extracting versions, searching for strings etc.
+
+## The `rules.vc` file
+
+This is the heart of the current nmake system and remains so, with
+enhancements to include as much of project-independent functionality
+as possible. The file is responsible for
+
+* Determining the compiler environment including target architecture,
+supported compiler switches etc.
+
+* Parsing any options and macros supplied by the user on the command
+line
+
+* Extracting version numbers, include paths etc.
+
+* Defining compiler and linker switches, output paths, and standard
+targets based on the above.
+
+It is intended that there will be only one "master" `rules.vc` file,
+the one in the Tcl repository where all changes are made. Extensions
+will have unmodified copies of this if they need to be build against
+older versions of Tcl. Otherwise, they will use the one installed with
+Tcl or from the Tcl sources if building against the latter.
+
+## The `targets.vc` file
+
+This file, optionally included by the extension's master makefile,
+defines some standard targets that relieves the extension from having
+to define its own. It is separated from `rules.vc` so as to permit
+master makefile to modify macros set by `rules.vc` before they
+are expanded in the target rules.
+
+## Writing a makefile for an extension
+
+In the simplest case, a makefile for a Tcl extension would look like:
+
+>
+	PROJECT=sample
+	!include "rules-ext.vc"
+	PROJECT_OBJS = $(TMP_DIR)\sample.obj \
+	               $(TMP_DIR)\util.obj \
+    !if !$(STATIC_BUILD)
+                   $(TMP_DIR)\sample.res
+	!endif
+	!include "targets.vc"
+
+This suffices to generate shared, static and debug versions of the
+extension by invoking `nmake` as
+
+>
+	nmake /f makefile.vc INSTALLDIR=/path/to/tcl
+	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=static
+	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=debug
+
+respectively. In addition, it also includes generation of the install
+target so that
+
+>
+    nmake /f makefile.vc INSTALLDIR=/path/to/tcl install
+
+will install the extension including generation of a pkgIndex.tcl
+file if necessary.
+
+In case of a Tk extension, the following line is needed
+before including `rules-ext.vc`.
+
+>
+    PROJECT_REQUIRES_TK = 1
+
+There will be cases where the above does not suffice. For example,
+the default rules do not generate and install
+documentation as Tcl extensions do not have a common format and
+structure for the same. In simple cases like this, the appropriate
+target can be extended with additional commands:
+
+>
+    install: install-docs
+    $(CPY) $(DOCDIR)\*.html "$(DOC_INSTALL_DIR)"
+
+Note `CPY`, `DOCDIR` and `DOC_INSTALL_DIR` are all predefined or
+computed macros within rules.vc.
+
+In more complicated cases, the default make rules can be customized
+through definition of macros that control it before including the
+`rules-ext.vc` file in the parent makefile. In the extreme case,
+the parent makefile can ignore the implicit rules and targets defined
+by the system and simply make use of a standard set macros that
+encapsulate the compiler and linker options to be used.
+
+The next few sections go into more detail about using the nmake build
+system and its customization.
+
 
 # Reference Implementation
 
-In progress, in the vc-reform branch in the core.tcl.tk repositories.
+The vc-reform branch in the core.tcl.tk repositories contains work-in-progress.
 
 # Copyright
 
