Define source and Tcl directory structure

--- a/tip/477.md
+++ b/tip/477.md
@@ -17,8 +17,7 @@ addresses only the latter with a view to modernize it to remove
 obsolete features, non-optimal build settings, and simplify writing
 and maintenance of extensions.
 
-This TIP is not only a proposal, but is also intended as documentation
-of the reworked nmake build system.
+This TIP also serves as the documentation of the reworked nmake build system.
 
 # Background and Rationale
 
@@ -71,6 +70,18 @@ Thus, a secondary goal is to *simplify the writing of extension
 makefiles to a minimalist form that reduces the boilerplate to
 extension-specific configuration*.
 
+The following makefile should suffice to build DLL,
+static and debug versions of an extension with standard targets
+like `install`, `clean` etc.
+
+>
+	PROJECT=sample
+	!include "rules-ext.vc"
+	PRJ_OBJS = $(TMP_DIR)\sample.obj \
+	               $(TMP_DIR)\util.obj
+	!include "targets.vc"
+
+
 ## Auditing compiler configuration
 
 There are some bugs, inconsistencies and misconfiguration of compiler
@@ -101,7 +112,60 @@ features.
 
     nmake /f makefile.vc ?targets? ?macros? 
 
-The predefined targets and macros are detailed later.
+The targets are as always defined by the makefile. However, the system
+also has standard predefined targets that makes it unnecessary for the
+extension makefile to define targets in many common cases. These
+are detailed later.
+
+## Build configuration macros
+
+The macros passed on the command line are for the most part the same
+as in the current system. They specify the build configuration such as
+whether an extension is built as a static or shared library,
+instrumentation, generation of debug information and so on. The most
+commonly useful macros and their possible values are listed below.
+For a full list, see the comments in `rules.vc` file.
+
+The `OPTS` macro controls the build configuration for the compiler and
+linker. Its value is a comma-separated list of option values, the more
+common options being listed in the table below.
+
+>
+Option | Effect
+-------|-------
+`none`|Nullifies other options even if they are specified.
+`static` | Builds the module as a static library instead of the default shared library
+`pdbs` | Generates PDB files with symbol information even for release builds
+`symbols` | Builds a debug version (no optimization, debug C runtime, PDB's)
+`staticpkg` | Specifies `registry` and `dde` extensions should be statically bound (`tclsh` and `wish` only)
+
+The `STATS` macro, also specified as a comma-separated list,
+controls generation of instrumentation code as shown
+below. This is relevant only for building Tcl itself, not extensions.
+
+>
+Option|Effect
+------|------
+`none`|Turns off all instrumentation irrespective of other options being specified.
+`memdbg`|Enables instrumentation of memory allocation.
+`compdbg`|Enables byte compiler logging for debugging purposes.
+
+The `CHECKS` macro configure additional compiler checks and warnings.
+
+>
+Option|Effect
+------|------
+`none`|Turns off other `CHECKS` options even if specified.
+`nodep`|Disables support for deprecated functions.
+`fullwarn`|Cranks up the compiler warnings level.
+`64bit`|Enables 64-bit portability warnings.
+
+The following command will generate a static library with PDB debug
+information, memory instrumentation, full warnings and disabling
+of deprecated functions.
+
+>
+    nmake /f makefile.vc OPTS=static,pdbs STATS=memdbg CHECKS=nodep,fullwarn
 
 # Specification
 
@@ -111,7 +175,7 @@ To eliminate the issue of divergence between the nmake support files
 as well as the need for continual maintenance and update, the files
 `rules.vc`, `nmakehlp.c` and `targets.vc` will be installed as part
 of a Tcl install in a similar fashion to `tclconfig.sh`,
-`tclstub86.lib` etc.  except that they will be placed in the
+`tclstub86.lib` etc. except that they will be placed in the
 `lib\nmake` subdirectory under the Tcl installation's root directory.
 
 These files will also be copied to each extension's source repository
@@ -123,7 +187,7 @@ include these files in their installation.
 
 ## The `rules-ext.vc` file
 
-The `rules.vc` file is intended to be included by the extension's
+The `rules-ext.vc` file is intended to be included by the extension's
 makefile to locate and load the latest compatible `rules.vc` file.  It
 checks if the installed Tcl has copies of `rules.vc` and `nmakehlp.c`
 that are newer versions than the ones in the extension sources, and if
@@ -176,19 +240,35 @@ to define its own. It is separated from `rules.vc` so as to permit
 master makefile to modify macros set by `rules.vc` before they
 are expanded in the target rules.
 
-## Writing a makefile for an extension
+## Makefile for a basic Tcl extension
 
-In the simplest case, a makefile for a Tcl extension would look like:
+**NOTE:** By convention, makefiles using the nmake system are named
+`makefile.vc`. Here we refer to them simply as makefile.
+
+As stated earlier, in the simplest case, the following serves as a
+complete makefile for a Tcl extension.
 
 >
 	PROJECT=sample
 	!include "rules-ext.vc"
 	PROJECT_OBJS = $(TMP_DIR)\sample.obj \
 	               $(TMP_DIR)\util.obj \
-    !if !$(STATIC_BUILD)
-                   $(TMP_DIR)\sample.res
 	!endif
 	!include "targets.vc"
+
+Only two macros need be defined to build an Tcl extension with an
+additional one required for a Tk extension.
+
+>
+Macro|Description
+-----|-----------
+`PROJECT`|Name of the package. Must be defined before including `rules-ext.vc`.
+`PROJECT_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` exactly as shown above.
+`PROJECT_REQUIRES_TK`|Define as `1` before including `rules-ext.vc` if the extension is a Tk extension. Do **not** define for a Tcl-only extension.
+
+The lines must be in the order shown with `PROJECT` defined before
+inclusion of `rules-ext.vc` and `PROJECT_OBJS` after. The standard
+targets, defined in `targets.vc`, are included last.
 
 This suffices to generate shared, static and debug versions of the
 extension by invoking `nmake` as
@@ -198,20 +278,103 @@ extension by invoking `nmake` as
 	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=static
 	nmake /f makefile.vc INSTALLDIR=/path/to/tcl OPTS=debug
 
-respectively. In addition, it also includes generation of the install
-target so that
+respectively. In addition, it also includes targets for installation
+so that
 
 >
     nmake /f makefile.vc INSTALLDIR=/path/to/tcl install
 
 will install the extension including generation of a pkgIndex.tcl
-file if necessary.
+file if necessary. Additional other targets are described later.
 
 In case of a Tk extension, the following line is needed
 before including `rules-ext.vc`.
 
 >
     PROJECT_REQUIRES_TK = 1
+
+## Location of Tcl and Tk directories
+
+Building an extension requires Tcl, and optionally Tk, header files
+and libraries. The nmake build system locates directories in the
+following order:
+
+The installation directory is specified via the `INSTALLDIR` macro on
+the command line. If unspecified, this defaults to `C:\Tcl`.
+**NOTE**: this is a change from the current default of
+`C:\Program Files\Tcl` because the latter may not have access
+permissions for the user.
+
+The location of the Tcl header files and libraries is specified
+with the `TCLDIR` macro.
+
+* If the macro `TCLDIR` is defined on the command line, it is used as
+  the location of the Tcl root directory. This is generally the
+  directory containing an installed Tcl but could also point to the
+  root of a Tcl source tree if the extension requires Tcl internal
+  headers (not recommended).
+
+* If `TCLDIR` is not defined, the macro `INSTALLDIR` is treated as the
+  Tcl root directory **if** the directory exists and contains the expected
+  header files.
+
+* As a last resort, the directory `../../tcl` is checked and if
+  containing the expected header files, used as the value of `TCLDIR`.
+
+* If the header files still cannot be located, an error is generated.
+
+The macros `_INSTALLDIR` and `_TCLDIR` are generated from `INSTALLDIR`
+and `TCLDIR` respectively and contain the native form of the path
+(using backslashes as directory separators).
+
+## Location of extension sources and implicit rules
+
+The basic makefile shown earlier assumes the following directory
+structure for the extension sources:
+
+>
+Subdirectory|Macro|Description
+---|---|---
+`generic`|`GENERICDIR`|Contains platform-neutral source files.
+`win`|`WINDIR`|Contains Windows specific source files.
+`compat`|`COMPATDIR`|Contains additional portability functions not present on all platforms.
+
+The `rules.vc` file contains implicit rules to generate the object
+files corresponding to sources in any of these directories. If the
+source directories are named differently, the corresponding macro
+can be defined appropriately **before** including `rules-ext.vc`.
+
+So for example, if your generic sources were in directory `src`, the
+makefile would be modified as
+
+>
+	PROJECT = sample
+	GENERICDIR = ..\src
+	!include "rules-ext.vc"
+    ...rest remains same...
+
+In case there are additional directories containing sources, you
+will have to define additional implicit rules. For example, if
+the directory `extrasrc` contained the additional sources, you would
+add the line
+
+>
+    EXTRADIR = $(ROOT)\extrasrc
+    {$(EXTRADIR)}.c{$(TMP_DIR)}.obj::
+	        $(cc32) $(pkgcflags) -Fo$(TMP_DIR)\ @<<
+    $<
+    <<
+
+Here `cc32` and `pkgcflags` are standard macros defined within
+`rules.vc`. These are described later.
+
+
+
+## Output directories
+
+TBD
+
+## TBD - extending targets
 
 There will be cases where the above does not suffice. For example,
 the default rules do not generate and install
