A bit more work. Committing before experimenting with toc generation.

--- a/tip/477.md
+++ b/tip/477.md
@@ -72,7 +72,10 @@ extension-specific configuration*.
 
 The following makefile should suffice to build DLL,
 static and debug versions of an extension with standard targets
-like `install`, `clean` etc.
+like `install`, `clean` etc. It will also automatically perform
+ancillary tasks such as embedding a Windows version resource in
+the generated binary without the extension writer having to
+write a resource definition file.
 
 >
 	PROJECT=sample
@@ -81,6 +84,8 @@ like `install`, `clean` etc.
 	               $(TMP_DIR)\util.obj
 	!include "targets.vc"
 
+For more complex extensions, the build system should be incrementally
+customizable using "building blocks".
 
 ## Auditing compiler configuration
 
@@ -91,7 +96,7 @@ important extensions like Tk and Sqlite, differing floating point
 conformance options in debug and release builds even within Tcl and so
 on.
 
-Therefore, *a standard set of documented `nmake` macros are needed to
+Therefore, *a standard set of documented `nmake` macros are defined to
 ensure consistency across build configurations*.
 
 ## Non-goals
@@ -251,7 +256,7 @@ complete makefile for a Tcl extension.
 >
 	PROJECT=sample
 	!include "rules-ext.vc"
-	PROJECT_OBJS = $(TMP_DIR)\sample.obj \
+	PRJ_OBJS = $(TMP_DIR)\sample.obj \
 	               $(TMP_DIR)\util.obj \
 	!endif
 	!include "targets.vc"
@@ -263,7 +268,7 @@ additional one required for a Tk extension.
 Macro|Description
 -----|-----------
 `PROJECT`|Name of the package. Must be defined before including `rules-ext.vc`.
-`PROJECT_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` exactly as shown above.
+`PRJ_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` exactly as shown above.
 `PROJECT_REQUIRES_TK`|Define as `1` before including `rules-ext.vc` if the extension is a Tk extension. Do **not** define for a Tcl-only extension.
 
 The lines must be in the order shown with `PROJECT` defined before
@@ -327,6 +332,13 @@ The macros `_INSTALLDIR` and `_TCLDIR` are generated from `INSTALLDIR`
 and `TCLDIR` respectively and contain the native form of the path
 (using backslashes as directory separators).
 
+In the case of extensions, the macro `TCLINSTALL` is set to `1` if the
+extension is being built against an installed Tcl and `0` if it is
+built against Tcl sources. For Tk extensions, the macro `TKINSTALL` is
+set similarly depending on whether the extension is being built
+against an installed Tk or against Tk sources.
+
+
 ## Location of extension sources and implicit rules
 
 The basic makefile shown earlier assumes the following directory
@@ -335,11 +347,15 @@ structure for the extension sources:
 >
 Subdirectory|Macro|Description
 ---|---|---
-`generic`|`GENERICDIR`|Contains platform-neutral source files.
-`win`|`WINDIR`|Contains Windows specific source files.
-`compat`|`COMPATDIR`|Contains additional portability functions not present on all platforms.
+`generic`|`GENERICDIR`|Directory containing platform-neutral source files.
+`win`|`WINDIR`|Directory containing Windows specific source files.
+`compat`|`COMPATDIR`|Directory with additional source files implementing functions not present on all platforms.
+`doc`|`DOCDIR`|Directory containing documentation files.
+`demos`|`DEMODIR`|Directory containing any demo files.
+`tools`|`TOOLSDIR`|Directory containing any build tools.
 
-The `rules.vc` file contains implicit rules to generate the object
+Only the `GENERICDIR`, `WINDIR` and `COMPATDIR` macros are used 
+by `rules.vc` file. Implicit rules are defined to generate the object
 files corresponding to sources in any of these directories. If the
 source directories are named differently, the corresponding macro
 can be defined appropriately **before** including `rules-ext.vc`.
@@ -353,13 +369,15 @@ makefile would be modified as
 	!include "rules-ext.vc"
     ...rest remains same...
 
-In case there are additional directories containing sources, you
-will have to define additional implicit rules. For example, if
-the directory `extrasrc` contained the additional sources, you would
-add the line
+In case there are additional directories containing sources, you will
+have to define an additional implicit rule for each such
+directory. For example, if the directory `extrasrc` contained the
+additional sources, you would add the lines below after including
+`rules-ext.vc`.
 
 >
     EXTRADIR = $(ROOT)\extrasrc
+
     {$(EXTRADIR)}.c{$(TMP_DIR)}.obj::
 	        $(cc32) $(pkgcflags) -Fo$(TMP_DIR)\ @<<
     $<
@@ -368,9 +386,36 @@ add the line
 Here `cc32` and `pkgcflags` are standard macros defined within
 `rules.vc`. These are described later.
 
+The `DOCDIR`, `DEMODIR` and `TOOLSDIR` macros are only defined
+as conveniences for the parent makefile.
+
+## Output directories and file names
+
+Based on the options specified on the command line, compiler version
+and target architecture, the following macros are defined:
+
+Macro|Description
+-----|-----------
+`OUT_DIR`|Directory to place output executables and libraries
+`TMP_DIR`|Directory to place all the object files
+
+The output directory path placed in `OUT_DIR` has the form
+`Release_COMPILERVERSION` for x86 builds and
+`Release_AMD64_COMPILERVERSION` for x64 builds (the discrepancy
+in inclusion of architecture is historical).
+
+The object files directory path placed in `TMP_DIR` has the form
 
 
-## Output directories
+## Implicit rules
+
+TBD
+
+## Compiler and link flags
+
+TBD
+
+## Windows resource files
 
 TBD
 
